# bittorrent

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: lib.rs  main.rs  torrent.rs
src/commands/: decode.rs
src/tracker/: request.rs  response.rs
