[package]
name = "bittorrent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.59", features = ["derive"] }
hex = "0.4.3"
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.19"
serde_json = "1.0.149"
sha1 = "0.10.6"
tokio = { version = "1.49.0", features = ["full"] }
ulid = "1.2.1"
